# AI8888-tools

./: .gitignore  NOTICE.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build-desktop.yml  publish-release.yml
scripts/: run-renderer-tests.mjs  verify-version.mjs
src/: CodexOfficialAccount.tsx  WorkspaceCenter.tsx  main.tsx  styles.css  subscription.ts  useCodexAuth.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: api.rs  backup.rs  codex_auth.rs  codex_sessions.rs  config.rs  config_profiles.rs  config_transaction.rs  error.rs  lib.rs  local_proxy.rs  main.rs  models.rs  unified_sessions.rs  usage.rs  workspace.rs
src-tauri/src/tools/: mod.rs
tests/: subscription.test.ts
